--- a/bms/0916.md
+++ b/bms/0916.md
@@ -22,7 +22,19 @@
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20190916182907.png"/></div>
 
 
-
 ### 参考：
 
 - [一分钟实现内网穿透（ngrok 服务器搭建）](https://blog.csdn.net/zhangguo5/article/details/77848658)
+
+
+
+
+
+### 错误提示
+
+- 如图：
+
+<div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20190916184513.png"/></div>
+
+- 官方解答：[连不上 / 错误信息等问题解决汇总](https://natapp.cn/article/errors)
+
