--- a/bms/0916.md
+++ b/bms/0916.md
@@ -21,7 +21,6 @@
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20190916182907.png"/></div>
 
-
 ### 参考：
 
 - [一分钟实现内网穿透（ngrok 服务器搭建）](https://blog.csdn.net/zhangguo5/article/details/77848658)
@@ -35,6 +34,8 @@
 - 如图：
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20190916184513.png"/></div>
-
 - 官方解答：[连不上 / 错误信息等问题解决汇总](https://natapp.cn/article/errors)
 
+- **个人实践**：针对于此种情况，刷新配置而无法保存的时候，是因为操作顺序不当，例如，要把 80 端口改为 8080 端口：
+  - 第一步，在网页配置端，直接修改端口为 8080
+  - 拉到最下面，点击修改，获取相应 authtoken 进行配置即可。
