--- a/bms/0920.md
+++ b/bms/0920.md
@@ -383,7 +383,7 @@ eureka:
 
 ### 用户权限表的 ID 是 UUID 随机生成的
 
-- 例如：
+- 如下为对应的实体类，从注解可看出是用户权限表
 
 ~~~java
 @Table(name = "au_user_role")
@@ -394,6 +394,17 @@ public class AuUserRole {
     @Id
     @Column(name = "ID")
     private String id;
+    
+    xxx;
 }
 ~~~
+
+- 对应的方法，如图：
+
+~~~java
+AuUserRole auUserRole1 = new AuUserRole();
+auUserRole1.setId(UUID.randomUUID().toString().replace("-", ""));
+~~~
+
+<div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20190920165650.png"/></div>
 
