--- a/bms/0920.md
+++ b/bms/0920.md
@@ -21,7 +21,6 @@
 - 描述：报错信息如下
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/bms-rabbitmq1.png"/></div>
-
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/bms-rabbitmq2.png"/></div>
 - 完整信息如下：
 
@@ -348,10 +347,24 @@ eureka:
 - 如图所示，已经注册上去了：
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20190920160341.png"/></div>
-
 - //TODO
 
+  - 201909231617更新：
 
+    注册不上去的原因是：配置中心开启了安全认证，代码和截图如下：
+
+    ~~~java
+    security:
+      user:
+        name: admin
+        password: admin
+    ~~~
+
+    <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20190923161803.png"/></div>
+
+- 修改方法：
+  - 第一种：关闭安全认证，即把对应的安全认证配置注释掉，注册地址使用：`http://localhost:8001/eureka/`
+  - 第二种：较为安全，依旧使用安全认证，只需要改一下各个服务对应的注册地址，改为：`http://admin:admin@localhost:8001/eureka/`
 
 ### Swagger 页面加载失败
 
@@ -360,14 +373,20 @@ eureka:
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20190920161954.png"/></div>
 
 
-
 - 解决：//TODO
 
 
+  - 201909231621更新：
+
+    是因为各个服务无法注册到注册中心，原因见上（已完成），此处需要注意：
+
+    在启动服务的过程中，控制台可能会显示：`Fetching config from server at : http://localhost:8888`，但是你的端口并不是 8888；这是因为配置文件的优先级不同，根据优先级在加载过程中产生的问题，bootstrap.yml 和 application.yml 的优先级是不同的；具体查看源码。
+
+- 此问题可以参考：[参考]([https://www.baidu.com/s?ie=utf-8&f=8&rsv_bp=1&rsv_idx=1&tn=baidu&wd=Fetching%20config%20from%20server%20at%20%3A%20http%3A%2F%2Flocalhost%3A8888&rsv_pq=f789745c0002d845&rsv_t=5bb0VUFgAhO0yxg5Y3axL2%2BDKuJCu%2FuEdWt1poz0kvLLWq0pC3VQbwIUmSM&rqlang=cn&rsv_enter=1&rsv_dl=tb&rsv_n=2&rsv_sug3=1&rsv_sug2=0&inputT=346&rsv_sug4=345](https://www.baidu.com/s?ie=utf-8&f=8&rsv_bp=1&rsv_idx=1&tn=baidu&wd=Fetching config from server at %3A http%3A%2F%2Flocalhost%3A8888&rsv_pq=f789745c0002d845&rsv_t=5bb0VUFgAhO0yxg5Y3axL2%2BDKuJCu%2FuEdWt1poz0kvLLWq0pC3VQbwIUmSM&rqlang=cn&rsv_enter=1&rsv_dl=tb&rsv_n=2&rsv_sug3=1&rsv_sug2=0&inputT=346&rsv_sug4=345)) ,[优先级问题概述链接1](https://blog.csdn.net/hubo_88/article/details/80726901) ，[优先级问题概述链接2](https://blog.csdn.net/qq_17394183/article/details/89886389)
 
 
 
-- 参考：[链接](http://www.mamicode.com/info-detail-2235108.html)
+- 参考： [链接](http://www.mamicode.com/info-detail-2235108.html)
 
 
 
@@ -407,4 +426,3 @@ auUserRole1.setId(UUID.randomUUID().toString().replace("-", ""));
 ~~~
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20190920165650.png"/></div>
-
