--- a/bms/0920.md
+++ b/bms/0920.md
@@ -372,7 +372,6 @@ eureka:
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20190920161954.png"/></div>
 
-
 - 解决：//TODO
 
 
@@ -400,7 +399,7 @@ eureka:
 
 
 
-### 用户权限表的 ID 是 UUID 随机生成的
+### 用户 QX 表的 ID 是 UUID 随机生成的
 
 - 如下为对应的实体类，从注解可看出是用户权限表
 
