--- a/bms/0924.md
+++ b/bms/0924.md
@@ -7,8 +7,8 @@ spring:
   datasource:
     test:
       url: jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false
-      username: root
-      password: root
+      username: xxx
+      password: xxx
       filters: stat
       maxActive: 20
       initialSize: 1
@@ -22,15 +22,15 @@ spring:
       testOnReturn: false
       poolPreparedStatements: true
       maxOpenPreparedStatements: 20
-    platedb:
-      url: jdbc:mysql://127.0.0.1:3306/platedb?useUnicode=true&characterEncoding=utf-8&useSSL=false
-      username: root
-      password: root
+    xxx:
+      url: jdbc:mysql://127.0.0.1:3306/xxx?useUnicode=true&characterEncoding=utf-8&useSSL=false
+      username: xxx
+      password: xxx
 ~~~
 
 
 
-在 `datasource` 节点下再加一个新数据源配置，代码如上所示，其中 `test`，`platedb` 为两个不同的数据库。
+在 `datasource` 节点下再加一个新数据源配置，代码如上所示，其中 `test`，`xxx` 为两个不同的数据库。
 
 #### 问题
 
@@ -39,7 +39,6 @@ spring:
 - 截图：
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20190925140335.png"/></div>
-
 - 解决：//TODO
 
 
