--- a/bms/0924-项目记录-多数据源.md
+++ b/bms/0924-项目记录-多数据源.md
@@ -40,8 +40,22 @@ spring:
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20190925140335.png"/></div>
 - 解决：//TODO
+- 201910102146更新：配置一个 JDBC Driver 是不够的，每个数据源都需要配置
 
-
+~~~yaml
+spring:
+  datasource:
+    estbms:
+      url: jdbc:mysql://127.0.0.1:3306/xxx?useUnicode=true&characterEncoding=utf-8&useSSL=false
+      username: xxx
+      password: xxx
+      driver-class-name: com.mysql.jdbc.Driver
+    platedb:
+      url: jdbc:mysql://127.0.0.1:3306/xxx?useUnicode=true&characterEncoding=utf-8&useSSL=false
+      username: xxx
+      password: xxx
+      driver-class-name: com.mysql.jdbc.Driver
+~~~
 
 
 
