--- a/bms/0929-项目记录-Json树.md
+++ b/bms/0929-项目记录-Json树.md
@@ -245,7 +245,6 @@ public class IMenuServiceImpl extends BaseServiceImpl<Menu> implements MenuServi
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20190930002833.png"/></div>
 
 
-
 - 返回的 Json 树
 
 ~~~json
@@ -359,7 +358,7 @@ public class IMenuServiceImpl extends BaseServiceImpl<Menu> implements MenuServi
 
 
 
-
+- 201910101900更新，具体代码参考项目
 
 ### 参考文章
 
@@ -368,3 +367,4 @@ public class IMenuServiceImpl extends BaseServiceImpl<Menu> implements MenuServi
 [@Transient 注解](https://blog.csdn.net/sinat_29581293/article/details/51810805)
 
 [Java 递归查询 Json 树](https://blog.csdn.net/u010393325/article/details/80696555)
+
