--- a/bms/201910181444-项目记录-路由过滤敏感头.md
+++ b/bms/201910181444-项目记录-路由过滤敏感头.md
@@ -5,6 +5,38 @@
 - 描述：当前端发送的请求通过路由 Zuul 转发时，无法获取请求头的信息
 - 关键词：Zuul 过滤敏感头
 
+~~~java
+    zuul:
+    	ignored-headers: xxx
+	
+	
+	/**
+	 * Names of HTTP headers to ignore completely (i.e. leave them out of downstream
+	 * requests and drop them from downstream responses).
+	 */
+	private Set<String> ignoredHeaders = new LinkedHashSet<>();
+
+
+	public Set<String> getIgnoredHeaders() {
+		Set<String> ignoredHeaders = new LinkedHashSet<>(this.ignoredHeaders);
+		if (ClassUtils.isPresent(
+				"org.springframework.security.config.annotation.web.WebSecurityConfigurer",
+				null) && Collections.disjoint(ignoredHeaders, SECURITY_HEADERS) && ignoreSecurityHeaders) {
+			// Allow Spring Security in the gateway to control these headers
+			ignoredHeaders.addAll(SECURITY_HEADERS);
+		}
+		return ignoredHeaders;
+	}
+
+	public void setIgnoredHeaders(Set<String> ignoredHeaders) {
+		this.ignoredHeaders.addAll(ignoredHeaders);
+	}
+
+ignored-headers 的入参是一个 Set 集合，
+~~~
+
+
+
 - 原因：引用自 [csdn](https://ask.csdn.net/questions/748656?sort=id)
 
 ~~~java
