--- a/bms/20191025-项目记录-k8s.md
+++ b/bms/20191025-项目记录-k8s.md
@@ -7,7 +7,6 @@
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20191025110546.png"/></div>
 
 
-
 2、删除所有集群节点：
 
 `在kubeadm-ansible/目录下执行` ：`ansible-playbook -i inventory/hosts reset.yml -K`
@@ -15,20 +14,37 @@
 3、查看 k8s 部署了哪些 Pod：`kubectl get po --all -namespaces`
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20191025111206.png"/></div>
-
 4、指定 namespaces，列出某一个命名空间下的所有 Pod：`kubectl get po -n <命名空间>`
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20191025111451.png"/></div>
-
 5、进入命名空间（即进入容器内部，类似于 docker 进入容器内部）：
 
 `kubectl exec -it <命名空间> -n kube-system /bin/bash`
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20191025112053.png"/></div>
-
 6、进入容器之后，查看 nginx 配置文件:
 
 - `whereis nginx`
 - `cat <路径>/nginx.conf`
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20191025112224.png"/></div>
+
+
+
+
+
+---
+
+
+
+7、获取所有命名空间的信息：`kubectl get po --all-namespaces`
+
+<div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20191028170652.png"/></div>
+
+8、容器状态：`kubectl describe po <namespaces> -n <name>` 
+
+<div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20191028170904.png"/></div>
+
+9、查看日志：`kubectl logs -f <namespaces> -n <name>`
+
+<div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20191028172052.png"/></div>
