--- a/bms/20191101-项目记录-持续交付.md
+++ b/bms/20191101-项目记录-持续交付.md
@@ -1,9 +1,14 @@
 ## 20191101 - 项目记录 - 持续交付
 
+
+
+#### 参考文档：[应用迁移](http://choerodon.io/zh/docs/transference-guide/application-migration/)
+
+
+
 1、应用管理 -> 应用 -> 创建应用
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20191101111809.png"/></div>
-
 
 - 会自动创建一个仓库
 - 创建成功之后如下图所示
@@ -24,48 +29,37 @@
 - 修改后：
   
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20191101113158.png"/></div>
-  
 - 查看应用在集群中的服务名称：`kubectl get svc -all-namespaces`
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20191101113022.png"/></div>
-
 4、开发完成后的步骤：先提交到 GitLab，再进入开发流水线 -> 持续集成
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20191101113452.png"/></div>
-
 选择对应的服务：
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20191101113621.png"/></div>
-
 5、runner 完成之后进行下一步：部署；首次使用的话需要和服务所在的集群进行连接
 
 - 创建环境：创建好了的话不需要本操作
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20191101113935.png"/></div>
-
 - 环境已经创建好了：
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20191101114042.png"/></div>
-
 6、将开发好的服务部署到这个环境中
 
 - 应用部署：部署流水线 -> 应用部署
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20191101115143.png"/></div>
-
 - 选择相应的服务
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20191101114406.png"/></div>
-
 - 选择版本
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20191101114505.png"/></div>
-
 - 选择部署模式：新建实例和替换实例
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20191101114548.png"/></div>
-
 - Pod 状态为绿色时，创建成功，如图：
 
 <div align=center><img src="https://mortre-picgo.oss-cn-beijing.aliyuncs.com/20191101114700.png"/></div>
-
